manifest/axion-ui-service.yaml
apiVersion: v1

kind: Service

metadata:
  namespace: axion-service
  name: axion-ui-service

spec:
  selector:
    app: axion-ui-deployment

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
